Dark mode fixed for pagination

--- a/src/styles/Pagination.css
+++ b/src/styles/Pagination.css
@@ -17,15 +17,11 @@
 
 .paginate-button {
   color: var(--primary-black);
+  /* background-color: var(--primary-white); */
   border: 2px solid var(--primary-black);
   margin: 10px;
   padding: 5px 10px;
   border-radius: 4px;
-}
-
-.paginate-button:hover {
-  color: var(--primary-white);
-  background-color: var(--primary-black);
 }
 
 .selected-page {
@@ -36,8 +32,15 @@
 .paginate-nav {
   font-size: 20px;
   font-weight: bold;
+  color: var(--primary-black);
 }
 
-.current-page {
-  font-weight: bold;
+
+.dark-mode .paginate-button{
+  color: var(--primary-white);
+  background-color: var(--primary-black);
+}
+.dark-mode .paginate-nav {
+
+  background-color: var(--primary-white);
 }
